# crypto-tk

./: .clang-format  .clang-tidy  .gitignore  .gitlab-ci.yml  .gitmodules  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  README.md  SConstruct  benchmarks.cpp  checks.cpp  gcov.sh  install_boost.sh  install_libsodium.sh  install_relic.sh  main.cpp  tests.cpp
bench/: CMakeLists.txt  bench_rcprf.cpp  bench_set_hash.cpp  bench_tdp.cpp  benchmarks.cpp  build.scons
cmake/: CodeCoverage.cmake  FindDependencies.cmake
coverage/: .gitignore  ci_build.sh  cleanup.sh  gen_coverage.sh  gen_report.sh  upload_report.sh
doc/: Doxyfile
fuzzing/: CMakeLists.txt  StandaloneFuzzTargetMain.c
fuzzing/targets/: strstrn.cpp
gtest/: CMakeLists.txt  gtest-all.cc  gtest.h
install_dependencies/: install_boost.sh  install_libsodium.sh  install_relic_easy.sh  install_relic_gmp.sh  install_relic_ubuntu_14_easy.sh  install_relic_ubuntu_14_gmp.sh  install_relic_ubuntu_14_x64_asm.sh  install_relic_x64_asm.sh
libsse_crypto.xcodeproj/: project.pbxproj
libsse_crypto.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
scripts/: check_format.sh  ci_build.sh  cppcheck.sh  format.sh  tidy.sh
site_scons/site_tools/: smart_concat.py
site_scons/site_tools/doxygen/: LICENCE.txt  __init__.py  doxygen.py  notes.txt
site_scons/site_tools/gcccov/: .gitignore  .travis.yml  __init__.py
src/: CMakeLists.txt  block_hash.cpp  block_hash.hpp  build.scons  cipher.cpp  cipher.hpp  fpe.cpp  fpe.hpp  hash.cpp  hash.hpp  hmac.cpp  hmac.hpp  key.cpp  key.hpp  prf.cpp  prf.hpp  prg.cpp  prg.hpp  prp.cpp  prp.hpp  puncturable_enc.cpp  puncturable_enc.hpp  random.cpp  random.hpp  rcprf.cpp  set_hash.cpp  set_hash.hpp  set_hash_elligator.cpp  set_hash_elligator.hpp  tdp.cpp  tdp.hpp  utils.cpp  utils.hpp  wrapper.cpp
src/aesni/: aesni.cpp  aesni.hpp
src/aez/: aez.c  aez.h
src/cmake/: OpenSSECryptConfig.cmake.in
src/cmake/modules/: FindSodium.cmake
src/doc/: Doxyfile.in
src/ecmh/: ctr_drbg.hpp  hugepages.hpp
src/ecmh/array_view/: array_view.hpp  is_contiguous.hpp
src/ecmh/binary_elliptic_curve/: GLS254.cpp  GLS254.hpp  Point.hpp  add.hpp  compress_point.hpp  sw.hpp  sw_blinded.hpp
src/ecmh/binary_field/: GF2_127_63.cpp  GF2_127_63.hpp  GF2_254.hpp  GF2m.hpp  QuadraticExtension.hpp  assign_hash.hpp  batch_invert.hpp  compute_linear_operation_table.hpp  generic_half_trace.hpp  generic_trace.hpp  invert_blinded.hpp  rand_element.hpp  solve_quadratic_blinded.hpp
src/ecmh/binary_field/detail/: GF2.hpp  apply_linear_table_transform.hpp  field_operation_helpers.hpp  limb.hpp  limb_ops.hpp  polynomial_base.hpp  polynomial_multiply.hpp  polynomial_reduce_127_63.hpp
src/ecmh/hash/: blake2b.hpp  blake2s.hpp  hash_expand.hpp
src/ecmh/hash/blake2b/: blake2b.cpp  blake2b.hpp
src/ecmh/hash/blake2s/: blake2s.cpp  blake2s.hpp
src/ecmh/multiset_hash/: AdHash.hpp  ECMH.hpp  MuHash.hpp
src/ecmh/multiset_hash/detail/: operation_helpers.hpp
src/ecmh/openssl/: bn.hpp  error.hpp  evp.hpp  rand.hpp  thread_safety.hpp
src/ecmh/utility/: assign_endian.hpp  division.hpp  enable_if.hpp  is_byte.hpp  is_resizable_container.hpp  logical.hpp  print.hpp  print_fwd.hpp  static_repeat.hpp
src/hash/: blake2b.cpp  blake2b.hpp  sha512.cpp  sha512.hpp
src/hash/blake2b/: blake2b-common.c  blake2b-common.h  blake2b-round.h  blake2b.cpp  blake2b.hpp
src/hash/blake2s/: blake2s-common.c  blake2s-common.h  blake2s-round.h  blake2s.cpp  blake2s.hpp
src/hash/sha512/: sha512_avx.asm  sha512_avx2_rorx.asm  sha512_base.c  sha512_sse4.asm
src/include/opensse/crypto/: cipher.hpp  hash.hpp  hmac.hpp  key.hpp  prf.hpp  prg.hpp  prp.hpp  puncturable_enc.hpp  random.hpp  set_hash.hpp  tdp.hpp
src/include/sse/crypto/: cipher.hpp  hmac.hpp  key.hpp  prf.hpp  prg.hpp  prp.hpp  puncturable_enc.hpp  rcprf.hpp  set_hash.hpp  tdp.hpp  utils.hpp  wrapper.hpp
src/mbedtls/: CMakeLists.txt  asn1.h  asn1parse.c  asn1write.c  base64.c  bignum.c  bignum.h  check_config.h  config.h  pem.c  pk.c  pk.h  pk_internal.h  pk_wrap.c  pkparse.c  pkwrite.c  rsa.c  rsa.h  rsa_io.c  rsa_io.h
src/ppke/: GMPpke.cpp  GMPpke.h  GMPpke.hpp  README.md  forwardsec.h  util.cpp  util.h  util.hpp
src/ppke/relic_wrapper/: common.c  common.h  relic_api.cpp  relic_api.h
src/sodium/: core.c  utils.c  utils.h
src/tdp_impl/: tdp_impl.hpp  tdp_impl_mbedtls.cpp  tdp_impl_mbedtls.hpp  tdp_impl_openssl.cpp  tdp_impl_openssl.hpp
tests/: CMakeLists.txt  aesni.cpp  blake2_kat.h  boost_test_include.hpp  build.scons  checks.cpp  encryption.cpp  encryption.hpp  hashing.cpp  hashing.hpp  prf_hmac.cpp  prf_hmac.hpp  test_block_hash.cpp  test_block_hash.hpp  test_ecmh.cpp  test_ecmh.hpp  test_fpe.cpp  test_fpe.hpp  test_hmac.cpp  test_hmac.hpp  test_mbedtls.cpp  test_ppke.cpp  test_ppke.hpp  test_prf.cpp  test_prg.cpp  test_prg.hpp  test_prp.cpp  test_rcprf.cpp  test_set_hash.cpp  test_tdp.cpp  test_tdp.hpp  test_utility.cpp
